# spring2024-assignment2-systems

./: .gitignore  pixi.toml  test_and_make_submission.sh  test_results.xml  timeline.html  writeup-old.typ  writeup.typ
cs336-basics/: pyproject.toml  requirements.txt
cs336-basics/cs336_basics/: model.py  optimizer.py
cs336-systems/: requirements.txt
cs336-systems/cs336_systems/: all_reduce_bench.py  arbench.py  ddp.py  hota.py  make_plots.ipynb  make_plots.py  profile_script.py  rmsnorm.py
cs336-systems/tests/: adapters.py  test_ddp.py  test_ddp_individual_parameters.py
results/: single_node_allreduce.csv  two_nodes_allreduce.csv  two_nodes_allreduce.txt
